Java client according to new openapi
-java client modified according to new generation