@@ -1,23 +1,34 @@
 package com.regula.documentreader.webclient.encryptedRCL;
 
-import com.regula.documentreader.webclient.ApiException;
-import com.regula.documentreader.webclient.api.DocumentReaderApi;
-import com.regula.documentreader.webclient.example.Main;
-import com.regula.documentreader.webclient.model.*;
-import com.regula.documentreader.webclient.model.ext.*;
-
-import javax.annotation.Nullable;
-import java.io.IOException;
-import java.io.UnsupportedEncodingException;
-import java.nio.charset.StandardCharsets;
-import java.nio.file.Files;
-import java.nio.file.Path;
-import java.util.List;
-import java.util.Base64;
-
 import static com.regula.documentreader.webclient.model.GraphicFieldType.DOCUMENT_FRONT;
 import static com.regula.documentreader.webclient.model.GraphicFieldType.PORTRAIT;
 import static com.regula.documentreader.webclient.model.TextFieldType.DOCUMENT_NUMBER;
+
+import com.regula.documentreader.webclient.api.DocumentReaderApi;
+import com.regula.documentreader.webclient.example.Main;
+import com.regula.documentreader.webclient.model.CheckResult;
+import com.regula.documentreader.webclient.model.ContainerList;
+import com.regula.documentreader.webclient.model.ContainerListListInner;
+import com.regula.documentreader.webclient.model.LexicalAnalysisResult;
+import com.regula.documentreader.webclient.model.MeasureSystem;
+import com.regula.documentreader.webclient.model.ProcessParams;
+import com.regula.documentreader.webclient.model.Result;
+import com.regula.documentreader.webclient.model.Scenario;
+import com.regula.documentreader.webclient.model.Source;
+import com.regula.documentreader.webclient.model.ext.EncryptedRCLRequest;
+import com.regula.documentreader.webclient.model.ext.ProcessRequestLicense;
+import com.regula.documentreader.webclient.model.ext.RecognitionParams;
+import com.regula.documentreader.webclient.model.ext.RecognitionRequest;
+import com.regula.documentreader.webclient.model.ext.RecognitionResponse;
+
+import java.io.IOException;
+import java.io.UnsupportedEncodingException;
+import java.nio.file.Files;
+import java.nio.file.Path;
+import java.util.ArrayList;
+import java.util.Arrays;
+
+import javax.annotation.Nullable;
 
 public class Example {
     public static final String API_BASE_PATH = "API_BASE_PATH";
@@ -39,12 +50,15 @@ public class Example {
         var encryptedRCL = new EncryptedRCLRequest(encryptedRCLBase64, 0, 0, 0);
 
         var containerList = new ContainerList();
-        containerList.setList(List.of(license, encryptedRCL));
+        containerList.setList(new ArrayList<>(Arrays.asList(
+                new ContainerListListInner(encryptedRCL),
+                new ContainerListListInner(license)
+        )));
 
-        var requestParams = new RecognitionParams()
+        ProcessParams requestParams = new RecognitionParams()
                 .withScenario(Scenario.FULL_PROCESS)
                 .withDoublePageSpread(true)
-                .withMeasureSystem(0)
+                .withMeasureSystem(MeasureSystem.METRIC)
                 .withDateFormat("M/d/yyyy")
                 .withAlreadyCropped(true);
 
